Fix wrap

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -1878,6 +1878,7 @@ ul.items {
         }
         span {
           max-width: 180px;
+          white-space: wrap;
         }
       }
     }
